# request_request_cangjie_wrapper

./: BUILD.gn  README.md  README_zh.md  bundle.json
mock/: ohos.request.cj
ohos/request/: BUILD.gn  agent.cj  error.cj  ffi.cj
test/APILevel21/request/test/: profile.json
test/APILevel21/request/test/entry/src/main/cangjie/src/: test_list_request.cj  test_request_agent.cj
test/APILevel22/request/test/hvigor/: hvigor-config.json5
test/hide_request/test/entry/src/main/cangjie/src/: Test_hide_request.cj  test_list_hide_request.cj
test/request/test/entry/src/main/: module.json5
test/request/test/entry/src/main/cangjie/src/: extend.cj  test_request_agent.cj
